--- a/deploy-spark-web-ui-controller.yaml
+++ b/deploy-spark-web-ui-controller.yaml
@@ -27,7 +27,7 @@ rules:
       - list
       - watch
   - apiGroups:
-      - ""
+      - "networking.k8s.io"
     resources:
       - ingresses
     verbs:
